<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">moodifyer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_page">Home</string>
    <string name="sample_window">Sample of dragging the entire window.\nThe menu is a simple ScrollView, with a click
        listener set on each item.\nThe drawer will animate slightly open, to make it more discoverable.\nAdditionally,
        if the menu is open, a back press will close it.</string>
    <string name="title_activity_login_page">Log In</string>
    <string name="title_activity_sign_up_page">Sign Up</string>
    <string name="title_activity_home_fragment">Home</string>
    <string name="title_activity_profile_fragment">Profile</string>
    <string name="title_activity_playlist_fragment">Mood List</string>
    <string name="title_activity_browse_fragment">Browse</string>
    <string name="title_activity_logout_fragment">Logout</string>
    <string name="title_activity_weeklytoptracks_fragment">Top Tracks</string>
    <string name="song_title">song_title</string>
    <string name="artist">artist</string>
    <string name="Email">Email</string>
    <string name="choosepassword">Choose Password</string>
    <string name="chooseusername">Choose Username</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="dob">Date of Birth</string>
    <string name="signup">SIGN UP</string>
    <string name="emptytitle">---------------</string>
    <string name="emptyartist">----------</string>
    <string name="emptyduration">00:00</string>
    <string name="genre">---</string>
    <string name="title_activity_listmood">ListmoodActivity</string>

</resources>